--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=GONZA\\MSSQLSERVER01;Database=TesisPadelDB;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "DefaultConnection": "Server=.;Database=TesisPadelDB;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
   "Logging": {
     "LogLevel": {
